Fixing it up a bit

--- a/views/resume.haml
+++ b/views/resume.haml
@@ -33,7 +33,7 @@
       %h3 
         ELC Technologies
         %i Software Engineer
-      %p.desc Web Application Developer, project lead.
+      %p.desc Web Application developer, project lead.
       %p.date Summer 2010 &#8211; Present
       
     %li
