--- a/views/layout.haml
+++ b/views/layout.haml
@@ -19,14 +19,14 @@
     
   
     %header
-      %nav
-        %ul
-          %li<
-            = link_to_unless_current "Resum&eacute;", "/"
-          %li<
-            = link_to_unless_current "Work", "/work"
-          %li<
-            = link_to_unless_current "Case Study", "/case-study"
+      / %nav
+      /   %ul
+      /     %li<
+      /       = link_to_unless_current "Resum&eacute;", "/"
+      /     %li<
+      /       = link_to_unless_current "Work", "/work"
+      /     %li<
+      /       = link_to_unless_current "Case Study", "/case-study"
     
       %img{ :src => Gravatar.new("matthew.willhite@gmail.com").image_url, :alt => "Picture of Matthew Willhite" } 
       %h1 Matthew Willhite
