--- a/views/resume.haml
+++ b/views/resume.haml
@@ -2,7 +2,7 @@
 %p.objective
   %strong To exceed my own expectations.
 
-  First and foremost, I am a problem solver. I am an advocate for simple code and design, even when backed with a complex architecture. I bring a different perspective to the teams I work with. The wide variety of experiences that I have lend themselves well to a small team.
+  First and foremost, I am a problem solver. I am an advocate for simple code and design, even when backed with a complex architecture. I bring a different perspective to the teams I work with.
   / This still needs help, not sure how to tie it back to the company
 
 
@@ -33,14 +33,14 @@
       %h3 
         ELC Technologies
         %i Software Engineer
-      %p.desc Web Application Developer, project lead.
+      %p.desc Worked on a variety of projects spanning both front-end and back-end development. I&rsquo;ve developed HTTP API&rsquo;s for complex SQL/NoSQL hybrid datastores using Ruby. Used Rails and Sinatra as a framework for several applications currently in production. Architected complex client-heavy applications with rich features and interactions.
       %p.date Summer 2010 &#8211; Present
       
     %li
       %h3 
         Fleet Ventures
         %i Project Lead / Developer
-      %p.desc Working as project lead and organizing an international team for the company&rsquo;s primary client. Collaboration with the client on a regular basis regarding usability and application design. Initiated and led in implementing an entire redesign/refactorization of the project&rsquo;s front-end to be more efficient, easier to maintain, and gearing up for future technologies (HTML5, Rails 3). Developed a non-trivial jQuery plugin that is used in each of the company&rsquo;s other projects.
+      %p.desc Worked as project lead and organizing an international team for the company&rsquo;s primary client. Collaboration with the client on a regular basis regarding usability and application design. Initiated and led in implementing an entire redesign/refactorization of the project&rsquo;s front-end to be more efficient, easier to maintain, and gearing up for future technologies (HTML5, Rails 3). Developed a non-trivial jQuery plugin that is used in each of the company&rsquo;s other projects.
       %p.date Winter 2009 &#8211; Summer 2010
 
     %li
@@ -69,7 +69,7 @@
       %h3
         Shorthand Media
         %i Developer
-      %p.desc Worked in tight collaboration with employer to create Flash applications and websites using Actionscript 2.0, backed by XML. 
+      %p.desc Worked in tight collaboration with employer to create Flash applications and websites using ActionScript 2.0, backed by XML. 
       %p.date Fall 2007 &#8211; Winter 2008
 
     %li
@@ -87,8 +87,8 @@
     %li
       %h3 Community
       %p To write, contribute, and release more code. 
-      %p Teaching, to better educate others as well as myself. I aspire to speak at conferences and help out at local workshops. I have recently signed up to be a mentor at <a href="http://railsmentors.org">RailsMentors</a>.
-      %p To participate in more local groups (currently I frequent <a href="http://refreshpdx.com">Portland Refresh</a>, <a href="http://pdxruby.com">Portland Ruby Brigade</a>, <a href="http://pdxjs.com/">Portland JavaScript Admirers</a>, and the newly formed <a href="http://www.meetup.com/pdxsemweb/">Semantic Web Interest Group</a>).
+      %p Teaching, to better educate others as well as myself. I aspire to speak at conferences and help out at local workshops. I am a mentor at <a href="http://railsmentors.org">RailsMentors</a>.
+      %p To participate in more local groups (<a href="http://pdxruby.com">Portland Ruby Brigade</a>, <a href="http://pdxjs.com/">Portland JavaScript Admirers</a>, and the newly formed <a href="http://www.meetup.com/pdxsemweb/">Semantic Web Interest Group</a>).
     
     %li
       %h3 Career
