--- a/views/resume.haml
+++ b/views/resume.haml
@@ -17,12 +17,8 @@
     %li
       %h3 
         Development
-      %p Ruby (Proficient), Rails (Proficient), JavaScript (Proficient), Clojure (Novice), CSS (Proficient)
+      %p Ruby (Proficient), JavaScript (Proficient), Clojure (Novice), Rails (Proficient), CSS (Proficient), Python (Novice)
 
-    %li
-      %h3 
-        Platforms &amp; Technologies
-      %p Heroku, Amazon S3, Passenger, Capistrano
 
 
 %section
@@ -31,10 +27,17 @@
   %ol
     %li
       %h3 
+        Instrument
+        %i Web Developer
+      %p.desc Straddling front-end and back-end on projects for Flipboard, Google and Nike. Working closely with and contributing to a custom application management system written entirely in Clojure. Using service-based architectures to drive rich JavaScript applications. Lead developer on Flipboard project, a marketing website with a wide variety of interactive elements and JavaScript widgets.
+      %p.date Winter 2012 &#8211; Present
+
+    %li
+      %h3 
         ELC Technologies
         %i Software Engineer
       %p.desc Worked on a variety of projects spanning both front-end and back-end development. I&rsquo;ve developed HTTP API&rsquo;s for complex SQL/NoSQL hybrid datastores using Ruby. Used Rails and Sinatra as a framework for several applications currently in production. Architected complex client-heavy applications with rich features and interactions.
-      %p.date Summer 2010 &#8211; Present
+      %p.date Summer 2010 &#8211; Winter 2012
       
     %li
       %h3 
@@ -93,15 +96,6 @@
     %li
       %h3 Career
       %p One that challenges me to do my best, to learn new things, and to always look ahead. 
-    
-/ 
-/ %section
-/   %h2 Interests
-/ 
-/   %ol
-/     %li
-/       %h3 Technologies
-/       %p Experimenting and exploring RDF/OWL, Node.js, UX, and a little machine learning.
 
 
 %section  
@@ -110,7 +104,7 @@
   %ol
     %li
       %h3 Portland State University
-      %p.desc Graduated with Bachelors of Arts in Graphic Design. Individual studies in website development.
+      %p.desc Graduated with Bachelors of Arts in Graphic Design.
       %p.date Fall 2003 &#8211; Spring 2007
 
 %section    
