--- a/views/resume.haml
+++ b/views/resume.haml
@@ -2,20 +2,19 @@
 %p.objective
   %strong To exceed my own expectations.
 
-  First and foremost, I am a problem solver. I am an advocate for simple code and design, even when backed with a complex architecture. I bring a different perspective to the teams I work with.
-  / This still needs help, not sure how to tie it back to the company
+  First and foremost, I am a problem solver. I am an advocate for simple code and design, even when backed with a complex architecture. My background allows me to bring a different perspective to the teams I work with.
 
 
 %section
   %h2 Skills
 
   %ol
-    %li 
-      %h3 General
-      %p Problem Solving, Learning, Teaching, Researching
-    
     %li
-      %h3 
+      %h3 General
+      %p Problem Solving, Learning, Teaching, Research
+
+    %li
+      %h3
         Development
       %p Ruby (Proficient), JavaScript (Proficient), Clojure (Novice), Rails (Proficient), CSS (Proficient), Python (Novice)
 
@@ -26,21 +25,21 @@
 
   %ol
     %li
-      %h3 
+      %h3
         Instrument
         %i Web Developer
       %p.desc Straddling front-end and back-end on projects for Flipboard, Google and Nike. Working closely with and contributing to a custom application management system written entirely in Clojure. Using service-based architectures to drive rich JavaScript applications. Lead developer on Flipboard project, a marketing website with a wide variety of interactive elements and JavaScript widgets.
       %p.date Winter 2012 &#8211; Present
 
     %li
-      %h3 
+      %h3
         ELC Technologies
         %i Software Engineer
       %p.desc Worked on a variety of projects spanning both front-end and back-end development. I&rsquo;ve developed HTTP API&rsquo;s for complex SQL/NoSQL hybrid datastores using Ruby. Used Rails and Sinatra as a framework for several applications currently in production. Architected complex client-heavy applications with rich features and interactions.
       %p.date Summer 2010 &#8211; Winter 2012
-      
+
     %li
-      %h3 
+      %h3
         Fleet Ventures
         %i Project Lead / Developer
       %p.desc Worked as project lead and organizing an international team for the company&rsquo;s primary client. Collaboration with the client on a regular basis regarding usability and application design. Initiated and led in implementing an entire redesign/refactorization of the project&rsquo;s front-end to be more efficient, easier to maintain, and gearing up for future technologies (HTML5, Rails 3). Developed a non-trivial jQuery plugin that is used in each of the company&rsquo;s other projects.
@@ -89,16 +88,16 @@
   %ol
     %li
       %h3 Community
-      %p To write, contribute, and release more code. 
+      %p To write, contribute, and release more code.
       %p Teaching, to better educate others as well as myself. I aspire to speak at conferences and help out at local workshops. I am a mentor at <a href="http://railsmentors.org">RailsMentors</a>.
-      %p To participate in more local groups (<a href="http://pdxruby.com">Portland Ruby Brigade</a>, <a href="http://pdxjs.com/">Portland JavaScript Admirers</a>, and the newly formed <a href="http://www.meetup.com/pdxsemweb/">Semantic Web Interest Group</a>).
-    
+      %p To participate in more local groups (<a href="http://pdxruby.com">Portland Ruby Brigade</a>, <a href="http://pdxjs.com/">Portland JavaScript Admirers</a>, and <a href="http://www.meetup.com/pdxsemweb/">Semantic Web Interest Group</a>).
+
     %li
       %h3 Career
-      %p One that challenges me to do my best, to learn new things, and to always look ahead. 
+      %p One that challenges me to do my best, to learn new things, and to always look ahead.
 
 
-%section  
+%section
   %h2 Education
 
   %ol
@@ -107,7 +106,7 @@
       %p.desc Graduated with Bachelors of Arts in Graphic Design.
       %p.date Fall 2003 &#8211; Spring 2007
 
-%section    
+%section
   %ol
     %li
       %h3 References available upon request
