--- a/views/layout.haml
+++ b/views/layout.haml
@@ -7,17 +7,16 @@
     %meta{ :name => "robots", :content => "noindex" }
 
     %title Matthew Willhite | Resumé
-    
-    %link{ :rel => "shortcut icon", :href => "/images/favicon.ico" } 
+
+    %link{ :rel => "shortcut icon", :href => "/images/favicon.ico" }
     %link{ :rel => "stylesheet", :href => "/stylesheets/styles.css" }
     %link{ :rel => "stylesheet", :href => "/stylesheets/print.css", :media => "print" }
-    
+
     /[if IE]
       %script{ :src => "http://html5shiv.googlecode.com/svn/trunk/html5.js" }
-    
+
   %body
-    
-  
+
     %header
       / %nav
       /   %ul
@@ -27,8 +26,8 @@
       /       = link_to_unless_current "Work", "/work"
       /     %li<
       /       = link_to_unless_current "Case Study", "/case-study"
-    
-      %img{ :src => Gravatar.new("matthew.willhite@gmail.com").image_url, :alt => "Picture of Matthew Willhite" } 
+
+      %img{ :src => Gravatar.new("matthew.willhite@gmail.com").image_url, :alt => "Picture of Matthew Willhite" }
       %h1 Matthew Willhite
       %ol
         %li<
@@ -40,12 +39,12 @@
           %a{ :href => "http://twitter.com/miwillhite" } twitter
 
         %li 1-503-777-7365
-  
+
     %section
       = yield
-    
+
     %footer
       %p<
-        \# This is a Sinatra 1.0 app written in Haml/Sass, using <a href="http://validator.w3.org/check?uri=http%3A%2F%2Fmiwillhite.heroku.com%2F">HTML5 Markup</a>. 
+        \# This is a Sinatrina 1.3.1 app written in Haml/Sass, using <a href="http://validator.w3.org/check?uri=http%3A%2F%2Fmwillhite.heroku.com%2F">HTML5 Markup</a>.
         %br<
         ="# (c) #{Time.now.year}. Matthew Willhite. All rights reserved."
