Updated with simple

--- a/views/resume.haml
+++ b/views/resume.haml
@@ -26,10 +26,17 @@
   %ol
     %li
       %h3
+        Simple
+        %i Software Engineer
+      %p.desc Worked closely with the Customer Relations team to optimize their workflow for dealing with customer issues. Built plugins for 3rd party software to smooth integration across applications. Developed features for support messaging and internal communications.
+      %p.date Fall 2012 &#8211; Winter 2013
+
+    %li
+      %h3
         Instrument
         %i Web Developer
       %p.desc Straddling front-end and back-end on projects for Flipboard, Google and Nike. Working closely with and contributing to a custom application management system written entirely in Clojure. Using service-based architectures to drive rich JavaScript applications. Lead developer on Flipboard project, a marketing website with a wide variety of interactive elements and JavaScript widgets.
-      %p.date Winter 2012 &#8211; Present
+      %p.date Winter 2012 &#8211; Fall 2012
 
     %li
       %h3
